# thehive-client-rs

./: Cargo.toml  README.md
docs/: AddAlertAttachments201Response.md  AlertApi.md  BulkDeleteAlertsRequest.md  BulkMergeAlertsIntoCaseRequest.md  CaseApi.md  CaseStatusValue.md  CaseTemplateApi.md  CommentApi.md  ErrorResponse.md  FindEntitiesByQuery200Response.md  ImpactStatusValue.md  InputAlert.md  InputAnalyzerJob.md  InputApplyCaseTemplate.md  InputBulkOrganisationLink.md  InputBulkUpdateAlert.md  InputBulkUpdateCase.md  InputBulkUpdateObservable.md  InputBulkUpdateTask.md  InputCase.md  InputCasePage.md  InputCaseTemplate.md  InputComment.md  InputCustomEvent.md  InputCustomField.md  InputCustomFieldValue.md  InputImportCase.md  InputObservable.md  InputObservableType.md  InputOrganisation.md  InputOrganisationLink.md  InputProcedure.md  InputProfile.md  InputPromoteAlert.md  InputQuery.md  InputResponderAction.md  InputShare.md  InputTask.md  InputTaskLog.md  InputUpdateAlert.md  (+55 more)
examples/alert/: create_and_fetch_alert.rs  create_minimalistic_alert.rs  create_update_fetch_alert.rs
examples/case/: create_and_fetch_case.rs  create_minimalistic_case.rs  create_update_fetch_case.rs  fetch_all_cases.rs
specs/: openapi.yaml
src/apis/: alert_api.rs  case_api.rs  case_template_api.rs  comment_api.rs  configuration.rs  mod.rs  query_api.rs  user_api.rs
src/models/: add_alert_attachments_201_response.rs  bulk_delete_alerts_request.rs  bulk_merge_alerts_into_case_request.rs  case_status_value.rs  error_response.rs  find_entities_by_query_200_response.rs  find_entities_by_query_request.rs  impact_status_value.rs  input_alert.rs  input_analyzer_job.rs  input_apply_case_template.rs  input_bulk_organisation_link.rs  input_bulk_update_alert.rs  input_bulk_update_case.rs  input_bulk_update_observable.rs  input_case.rs  (+75 more)
